Fix menu jump

--- a/packages/ui/src/components/Typography/Label.sass
+++ b/packages/ui/src/components/Typography/Label.sass
@@ -29,7 +29,6 @@
 
 	&.is-active
 		color: var(--cui-control-color--highlighted)
-		font-weight: 700
 		z-index: 1
 	a:focus:focus-visible &,
 	button:focus:focus-visible &,
